--- a/style.css
+++ b/style.css
@@ -18,8 +18,11 @@ header {
 section {
   background-color: #8F6448;
   border: solid 1px black;
-  margin: 50px 20px;
-  padding: 50px;
+  margin: 50px 40px;
+  padding-left: 35px;
+}
+section figure {
+  margin-top: 30px;
 }
 section figure img {
   width: 120px;
@@ -27,13 +30,13 @@ section figure img {
 section figure figcaption {
   font-size: 20px;
   font-weight: bold;
+  padding-left: 20px;
 }
 section button {
-  margin: 20px 0;
-  padding: 15px;
+  margin: 20px 10px;
+  padding: 10px;
   background-color: rgb(207, 52, 52);
   color: white;
   border: none;
-  cursor: pointer;
   border-radius: 10px;
 }/*# sourceMappingURL=style.css.map */
