--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+
+$font: "Quicksand", sans-serif;
+
 * {
   margin: 0;
   padding: 0;
@@ -5,43 +10,249 @@
 }
 
 header {
-  display: flex;
-  background-color: #34261D;
-  height: 70px;
-  padding-left: 20px;
-  gap: 200px;
-  color: white;
-  align-items: center;
-  font-family: cursive;
+  position: relative;
+  background-image: url('https://images.nightcafe.studio/jobs/nfDGYhd11hMKdAxZ5KXy/nfDGYhd11hMKdAxZ5KXy--1--posam.jpg?tr=w-1600,c-at_max');
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  z-index: 1;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: -1;
+  }
 }
 
-section {
-  background-color: #8F6448;
-  border: solid 1px black;
-  margin: 50px 40px;
-  // margin: top right bottom left;
-  padding-left: 35px;
+.menu-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+  background-color: rgb(0, 0, 0, 0.5);
+  font-family: $font;
 
-  figure {
-    margin-top: 30px;
+  ul {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    gap: 5rem;
 
-    img {
-      width: 120px;
+    a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+      transition: all 0.3s ease;
+
+      &:hover {
+        color: #f1c40f;
+      }
     }
+  }
+}
 
-    figcaption {
-      font-size: 20px;
-      font-weight: bold;
-      padding-left: 20px;
+.price-button {
+  display: flex;
+  align-items: center;
+
+  padding: 0.5rem 1rem;
+  background-color: #f1c40f;
+  color: #000;
+  font-size: 1rem;
+  font-weight: 500;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+
+  &:hover {
+    background-color: #d10f0f;
+    color: #f1c40f;
+  }
+
+  a {
+    color: #000;
+    text-decoration: none;
+    font-family: $font;
+
+    &:hover {
+      color: #f1c40f;
+    }
+  }
+}
+
+.header-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  color: #fff;
+
+  h1 {
+    font-family: "Lobster Two", system-ui;
+    font-size: 3rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+    color: #ECB712;
+    text-shadow:
+      1px 1px 3px rgba(0, 0, 0, 0.9),
+      2px 2px 5px rgba(0, 0, 0, 0.3),
+      3px 3px 7px rgba(0, 0, 0, 0.1);
+  }
+
+  p {
+    font-family: $font;
+    font-weight: 100;
+    margin-bottom: 20px;
+  }
+
+}
+
+.buttons {
+  display: flex;
+  gap: 1rem;
+  margin-top: 20px;
+
+  button {
+    padding: 0.5rem 1rem;
+    background-color: #6D4F34;
+    font-size: 1rem;
+    font-weight: 500;
+    border: 1px solid #f1c40f;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+
+    &:hover {
+      background-color: #d10f0f;
+      color: #f1c40f;
     }
   }
 
-  button {
-    margin: 20px 10px;
-    padding: 10px;
-    background-color: rgb(207, 52, 52);
-    color: white;
-    border: none;
-    border-radius: 10px;
+  a {
+    color: #f1c40f;
+    text-decoration: none;
+    font-family: $font;
+
+    &:hover {
+      color: #f1c40f;
+    }
+  }
+}
+
+#sobre {
+  font-family: $font;
+  width: 100%;
+  height: 100vh;
+  background-image: url('https://previews.123rf.com/images/nuevoimg/nuevoimg2309/nuevoimg230907132/212483860-mesa-de-madeira-vazia-e-cafeteria-desfocam-o-fundo-com-imagem-bokeh.jpg');
+  background-size: cover;
+  background-position: center;
+
+  h1 {
+    font-family: "Lobster Two", system-ui;
+    font-size: 3rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+    color: #ECB712;
+    text-shadow:
+      1px 1px 3px rgba(0, 0, 0, 0.9),
+      2px 2px 5px rgba(0, 0, 0, 0.3),
+      3px 3px 7px rgba(0, 0, 0, 0.1);
+    padding-left: 10px;
+    margin: 20px;
+  }
+
+  .container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 2rem;
+    padding-left: 20px;
+
+    .sobre-img {
+
+      img {
+        width: 100%;
+      }
+    }
+  }
+
+  .sobre-info {
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    margin: 20px;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: #ECB712;
+    margin-bottom: 1rem;
+    font-family: "Lobster Two", system-ui;
+  }
+
+  p {
+    font-weight: 100;
+    margin-bottom: 1rem;
+  }
+}
+
+.menu-container {
+  background-image: url('https://img.freepik.com/fotos-premium/piso-de-madeira-vazio-em-pub-ou-restaurante-com-luz-de-fundo-bokeh-foto-de-alta-qualidade_65800-738.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 138vh;
+
+
+  #menu {
+
+    h2 {
+      font-family: "Lobster Two", system-ui;
+      font-size: 3rem;
+      font-weight: 700;
+      padding: 20px;
+      color: #ECB712;
+      text-shadow:
+        1px 1px 3px rgba(0, 0, 0, 0.9),
+        2px 2px 5px rgba(0, 0, 0, 0.3),
+        3px 3px 7px rgba(0, 0, 0, 0.1);
+      padding-left: 10px;
+    }
+
+    .menu-item {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      margin: 0 20px;
+      color: #ECB712;
+      font-family: $font;
+
+      h3 {
+        font-size: 1.5rem;
+        font-weight: 700;
+        padding: 20px;
+      }
+
+      figure {
+        background-color: rgba(0, 0, 0, 0.5);
+        padding: 20px;
+        margin: 20px;
+        border-radius: 10px;
+        color: #fff;
+        border: solid 1px #ECB712;
+
+        img {
+          height: 20vh;
+          width: 30vh;
+        }
+      }
+    }
   }
 }
