--- a/style.css
+++ b/style.css
@@ -6,19 +6,68 @@
   box-sizing: border-box;
 }
 
+h1,
+h2 {
+  font-family: "Lobster Two", system-ui;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.9);
+  padding: 20px;
+}
+
+h1 {
+  font-size: 3rem;
+  color: #F5E5D1;
+}
+
+h2 {
+  font-size: 1.8rem;
+  color: #ef8533;
+}
+
+p,
+a,
+#sobre,
+#menu,
+#promocoes,
+#precos {
+  font-family: "Quicksand", sans-serif;
+}
+
+p,
+a {
+  padding: 10px;
+}
+
+a {
+  text-decoration: none;
+  color: #b06a2d;
+  transition: color 0.3s ease;
+}
+a:hover {
+  color: #8e5424;
+}
+
+button {
+  background-color: #4f2d0f;
+  padding: 10px 20px;
+  border: 2px solid #b06a2d;
+  border-radius: 10px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+button:hover {
+  background-color: #D3A06C;
+}
+
 header {
   position: relative;
-  background-image: url("https://images.nightcafe.studio/jobs/nfDGYhd11hMKdAxZ5KXy/nfDGYhd11hMKdAxZ5KXy--1--posam.jpg?tr=w-1600,c-at_max");
-  background-size: cover;
-  background-position: center;
+  background: url("https://png.pngtree.com/thumb_back/fw800/background/20230526/pngtree-lighting-of-cafe-table-and-chairs-image_2636000.jpg") center/cover;
   height: 100vh;
   z-index: 1;
 }
 header::before {
   content: "";
   position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
@@ -31,7 +80,6 @@ header::before {
   align-items: center;
   padding: 1rem 2rem;
   background-color: rgba(0, 0, 0, 0.5);
-  font-family: "Quicksand", sans-serif;
 }
 .menu-nav ul {
   display: flex;
@@ -39,175 +87,100 @@ header::before {
   list-style: none;
   gap: 5rem;
 }
-.menu-nav ul a {
-  color: #fff;
-  text-decoration: none;
-  font-weight: 500;
-  transition: all 0.3s ease;
-}
-.menu-nav ul a:hover {
-  color: #f1c40f;
-}
 
-.price-button {
-  display: flex;
-  align-items: center;
-  padding: 0.5rem 1rem;
-  background-color: #f1c40f;
-  color: #000;
-  font-size: 1rem;
-  font-weight: 500;
-  border: none;
-  border-radius: 20px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-.price-button:hover {
-  background-color: #d10f0f;
-  color: #f1c40f;
-}
-.price-button a {
-  color: #000;
-  text-decoration: none;
-  font-family: "Quicksand", sans-serif;
-}
-.price-button a:hover {
-  color: #f1c40f;
-}
-
-.header-content {
+.content {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100%;
-  color: #fff;
-}
-.header-content h1 {
-  font-family: "Lobster Two", system-ui;
-  font-size: 3rem;
-  font-weight: 700;
-  margin-bottom: 1rem;
-  color: #ECB712;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.9), 2px 2px 5px rgba(0, 0, 0, 0.3), 3px 3px 7px rgba(0, 0, 0, 0.1);
-}
-.header-content p {
-  font-family: "Quicksand", sans-serif;
-  font-weight: 100;
-  margin-bottom: 20px;
+  height: 80%;
 }
 
-.buttons {
-  display: flex;
-  gap: 1rem;
-  margin-top: 20px;
-}
-.buttons button {
-  padding: 0.5rem 1rem;
-  background-color: #6D4F34;
-  font-size: 1rem;
-  font-weight: 500;
-  border: 1px solid #f1c40f;
-  border-radius: 20px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-.buttons button:hover {
-  background-color: #d10f0f;
-  color: #f1c40f;
-}
-.buttons a {
-  color: #f1c40f;
-  text-decoration: none;
-  font-family: "Quicksand", sans-serif;
-}
-.buttons a:hover {
-  color: #f1c40f;
-}
-
-#sobre {
-  font-family: "Quicksand", sans-serif;
+#sobre,
+#menu,
+#promocoes,
+#precos {
   width: 100%;
-  height: 100vh;
-  background-image: url("https://previews.123rf.com/images/nuevoimg/nuevoimg2309/nuevoimg230907132/212483860-mesa-de-madeira-vazia-e-cafeteria-desfocam-o-fundo-com-imagem-bokeh.jpg");
-  background-size: cover;
-  background-position: center;
+  height: 100%;
+  background-color: rgba(41, 24, 49, 0.5);
 }
-#sobre h1 {
-  font-family: "Lobster Two", system-ui;
-  font-size: 3rem;
-  font-weight: 700;
-  margin-bottom: 1rem;
-  color: #ECB712;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.9), 2px 2px 5px rgba(0, 0, 0, 0.3), 3px 3px 7px rgba(0, 0, 0, 0.1);
-  padding-left: 10px;
-  margin: 20px;
-}
-#sobre .container {
+
+.info {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   gap: 2rem;
-  padding-left: 20px;
-}
-#sobre .container .sobre-img img {
-  width: 100%;
-}
-#sobre .sobre-info {
   padding: 20px;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: #fff;
-  margin: 20px;
-}
-#sobre h2 {
-  font-size: 1.5rem;
-  font-weight: 700;
-  color: #ECB712;
-  margin-bottom: 1rem;
-  font-family: "Lobster Two", system-ui;
-}
-#sobre p {
-  font-weight: 100;
-  margin-bottom: 1rem;
 }
 
-.menu-container {
-  background-image: url("https://img.freepik.com/fotos-premium/piso-de-madeira-vazio-em-pub-ou-restaurante-com-luz-de-fundo-bokeh-foto-de-alta-qualidade_65800-738.jpg");
-  background-size: cover;
-  background-position: center;
-  height: 138vh;
-}
-.menu-container #menu h2 {
-  font-family: "Lobster Two", system-ui;
-  font-size: 3rem;
-  font-weight: 700;
-  padding: 20px;
-  color: #ECB712;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.9), 2px 2px 5px rgba(0, 0, 0, 0.3), 3px 3px 7px rgba(0, 0, 0, 0.1);
-  padding-left: 10px;
-}
-.menu-container #menu .menu-item {
+.container,
+.menu-item,
+.destaques,
+.destaque-item {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
-  margin: 0 20px;
-  color: #ECB712;
-  font-family: "Quicksand", sans-serif;
+  gap: 2rem;
 }
-.menu-container #menu .menu-item h3 {
-  font-size: 1.5rem;
-  font-weight: 700;
-  padding: 20px;
+
+.container,
+.menu-item,
+.destaques {
+  padding-left: 20px;
 }
-.menu-container #menu .menu-item figure {
-  background-color: rgba(0, 0, 0, 0.5);
+
+.container {
+  flex-direction: column;
+}
+
+img {
+  border-radius: 20px 200px;
+  height: 70vh;
+  width: 80vh;
+}
+
+figure {
+  background-color: white;
   padding: 20px;
   margin: 20px;
   border-radius: 10px;
-  color: #fff;
-  border: solid 1px #ECB712;
+  text-align: center;
 }
-.menu-container #menu .menu-item figure img {
-  height: 20vh;
-  width: 30vh;
+figure img {
+  height: 25vh;
+  width: 35vh;
+}
+
+#promocoes {
+  height: 100vh;
+}
+#promocoes .destaques {
+  padding: 20px;
+}
+
+#precos table {
+  width: 100%;
+  height: 100vh;
+  padding: 20px;
+  font-size: large;
+  text-align: center;
+}
+#precos table thead {
+  background-color: #b06a2d;
+  color: #F5E5D1;
+}
+#precos table tbody {
+  background-color: rgba(233, 231, 228, 0.359);
+}
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 2rem;
+  }
+  .content {
+    padding: 10px;
+  }
+  .container {
+    flex-direction: column;
+  }
 }/*# sourceMappingURL=style.css.map */
