--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
 
+$primary-color: #F5E5D1;
+$secondary-color: #ef8533;
+$accent-color: #b06a2d;
+$background-color: #4f2d0f;
+$hover-color: #cb7834;
+$button-hover-color: #D3A06C;
+
 $font: "Quicksand", sans-serif;
+$font-size-large: 3rem;
+$font-size-medium: 1.8rem;
+$font-size-small: 1rem;
+$padding-large: 20px;
+$padding-small: 10px;
 
 * {
   margin: 0;
@@ -9,19 +21,74 @@ $font: "Quicksand", sans-serif;
   box-sizing: border-box;
 }
 
+@mixin text-shadow($level) {
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, $level);
+}
+
+h1,
+h2 {
+  font-family: "Lobster Two", system-ui;
+  @include text-shadow(0.9);
+  padding: $padding-large;
+}
+
+h1 {
+  font-size: $font-size-large;
+  color: $primary-color;
+}
+
+h2 {
+  font-size: $font-size-medium;
+  color: $secondary-color;
+}
+
+p,
+a,
+#sobre,
+#menu,
+#promocoes,
+#precos {
+  font-family: $font;
+}
+
+p,
+a {
+  padding: $padding-small;
+}
+
+a {
+  text-decoration: none;
+  color: $accent-color;
+  transition: color 0.3s ease;
+
+  &:hover {
+    color: darken($hover-color, 15%);
+  }
+}
+
+button {
+  background-color: $background-color;
+  padding: $padding-small $padding-large;
+  border: 2px solid $accent-color;
+  border-radius: 10px;
+  font-size: $font-size-small;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+
+  &:hover {
+    background-color: $button-hover-color;
+  }
+}
+
 header {
   position: relative;
-  background-image: url('https://images.nightcafe.studio/jobs/nfDGYhd11hMKdAxZ5KXy/nfDGYhd11hMKdAxZ5KXy--1--posam.jpg?tr=w-1600,c-at_max');
-  background-size: cover;
-  background-position: center;
+  background: url('https://png.pngtree.com/thumb_back/fw800/background/20230526/pngtree-lighting-of-cafe-table-and-chairs-image_2636000.jpg') center/cover;
   height: 100vh;
   z-index: 1;
 
   &::before {
     content: '';
     position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
@@ -34,225 +101,115 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem;
-  background-color: rgb(0, 0, 0, 0.5);
-  font-family: $font;
+  background-color: rgba(0, 0, 0, 0.5);
 
   ul {
     display: flex;
     align-items: center;
     list-style: none;
     gap: 5rem;
-
-    a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: 500;
-      transition: all 0.3s ease;
-
-      &:hover {
-        color: #f1c40f;
-      }
-    }
   }
 }
 
-.price-button {
-  display: flex;
-  align-items: center;
-
-  padding: 0.5rem 1rem;
-  background-color: #f1c40f;
-  color: #000;
-  font-size: 1rem;
-  font-weight: 500;
-  border: none;
-  border-radius: 20px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-
-  &:hover {
-    background-color: #d10f0f;
-    color: #f1c40f;
-  }
-
-  a {
-    color: #000;
-    text-decoration: none;
-    font-family: $font;
-
-    &:hover {
-      color: #f1c40f;
-    }
-  }
-}
-
-.header-content {
+.content {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 80%;
+}
+
+#sobre,
+#menu,
+#promocoes,
+#precos {
+  width: 100%;
   height: 100%;
-  color: #fff;
-
-  h1 {
-    font-family: "Lobster Two", system-ui;
-    font-size: 3rem;
-    font-weight: 700;
-    margin-bottom: 1rem;
-    color: #ECB712;
-    text-shadow:
-      1px 1px 3px rgba(0, 0, 0, 0.9),
-      2px 2px 5px rgba(0, 0, 0, 0.3),
-      3px 3px 7px rgba(0, 0, 0, 0.1);
-  }
-
-  p {
-    font-family: $font;
-    font-weight: 100;
-    margin-bottom: 20px;
-  }
-
+  background-color: rgba(41, 24, 49, 0.5);
 }
 
-.buttons {
+.info {
   display: flex;
-  gap: 1rem;
-  margin-top: 20px;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+  padding: $padding-large;
+}
 
-  button {
-    padding: 0.5rem 1rem;
-    background-color: #6D4F34;
-    font-size: 1rem;
-    font-weight: 500;
-    border: 1px solid #f1c40f;
-    border-radius: 20px;
-    cursor: pointer;
-    transition: all 0.3s ease;
+.container,
+.menu-item,
+.destaques,
+.destaque-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+}
 
-    &:hover {
-      background-color: #d10f0f;
-      color: #f1c40f;
-    }
-  }
+.container,
+.menu-item,
+.destaques {
+  padding-left: $padding-large;
+}
 
-  a {
-    color: #f1c40f;
-    text-decoration: none;
-    font-family: $font;
+.container {
+  flex-direction: column;
+}
 
-    &:hover {
-      color: #f1c40f;
-    }
+img {
+  border-radius: 20px 200px;
+  height: 70vh;
+  width: 80vh;
+}
+
+figure {
+  background-color: white;
+  padding: $padding-large;
+  margin: $padding-large;
+  border-radius: 10px;
+  text-align: center;
+
+  img {
+    height: 25vh;
+    width: 35vh;
   }
 }
 
-#sobre {
-  font-family: $font;
+#promocoes {
+  height: 100vh;
+
+  .destaques {
+    padding: $padding-large;
+  }
+}
+
+#precos table {
   width: 100%;
   height: 100vh;
-  background-image: url('https://previews.123rf.com/images/nuevoimg/nuevoimg2309/nuevoimg230907132/212483860-mesa-de-madeira-vazia-e-cafeteria-desfocam-o-fundo-com-imagem-bokeh.jpg');
-  background-size: cover;
-  background-position: center;
+  padding: $padding-large;
+  font-size: large;
+  text-align: center;
 
+  thead {
+    background-color: $accent-color;
+    color: $primary-color;
+  }
+
+  tbody {
+    background-color: rgba(233, 231, 228, 0.359);
+  }
+}
+
+@media (max-width: 768px) {
   h1 {
-    font-family: "Lobster Two", system-ui;
-    font-size: 3rem;
-    font-weight: 700;
-    margin-bottom: 1rem;
-    color: #ECB712;
-    text-shadow:
-      1px 1px 3px rgba(0, 0, 0, 0.9),
-      2px 2px 5px rgba(0, 0, 0, 0.3),
-      3px 3px 7px rgba(0, 0, 0, 0.1);
-    padding-left: 10px;
-    margin: 20px;
+    font-size: 2rem;
+  }
+
+  .content {
+    padding: $padding-small;
   }
 
   .container {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    gap: 2rem;
-    padding-left: 20px;
-
-    .sobre-img {
-
-      img {
-        width: 100%;
-      }
-    }
-  }
-
-  .sobre-info {
-    padding: 20px;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: #fff;
-    margin: 20px;
-  }
-
-  h2 {
-    font-size: 1.5rem;
-    font-weight: 700;
-    color: #ECB712;
-    margin-bottom: 1rem;
-    font-family: "Lobster Two", system-ui;
-  }
-
-  p {
-    font-weight: 100;
-    margin-bottom: 1rem;
-  }
-}
-
-.menu-container {
-  background-image: url('https://img.freepik.com/fotos-premium/piso-de-madeira-vazio-em-pub-ou-restaurante-com-luz-de-fundo-bokeh-foto-de-alta-qualidade_65800-738.jpg');
-  background-size: cover;
-  background-position: center;
-  height: 138vh;
-
-
-  #menu {
-
-    h2 {
-      font-family: "Lobster Two", system-ui;
-      font-size: 3rem;
-      font-weight: 700;
-      padding: 20px;
-      color: #ECB712;
-      text-shadow:
-        1px 1px 3px rgba(0, 0, 0, 0.9),
-        2px 2px 5px rgba(0, 0, 0, 0.3),
-        3px 3px 7px rgba(0, 0, 0, 0.1);
-      padding-left: 10px;
-    }
-
-    .menu-item {
-      display: flex;
-      justify-content: space-evenly;
-      align-items: center;
-      margin: 0 20px;
-      color: #ECB712;
-      font-family: $font;
-
-      h3 {
-        font-size: 1.5rem;
-        font-weight: 700;
-        padding: 20px;
-      }
-
-      figure {
-        background-color: rgba(0, 0, 0, 0.5);
-        padding: 20px;
-        margin: 20px;
-        border-radius: 10px;
-        color: #fff;
-        border: solid 1px #ECB712;
-
-        img {
-          height: 20vh;
-          width: 30vh;
-        }
-      }
-    }
+    flex-direction: column;
   }
 }
