--- a/assets/css/_menu.scss
+++ b/assets/css/_menu.scss
@@ -27,7 +27,7 @@ $hover-color: #555;
       color: #b9296f;
       margin: 1rem 0;
       padding: 1rem;
-      width: 25%;
+      width: 18%;
     }
 
     figure {
@@ -40,6 +40,25 @@ $hover-color: #555;
         width: 120px;
         height: 110px;
         border-radius: 50% 20px;
+      }
+
+      figcaption {
+        font-size: 0.875rem;
+        text-align: center;
+      }
+
+      button {
+        padding: 5px;
+        border-radius: 5px;
+        border: none;
+        background-color: #b9296f;
+        color: white;
+        font-size: 1rem;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+        &:hover {
+          background-color: #ff007f;
+        }
       }
     }
   }
